--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^16.9.7",
+    "@types/node": "^12.12.3",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
     "@types/styled-components": "^4.1.19",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
-    "react-dom": "^16.10.1",
+    "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.0",
     "typescript": "^3.6.4"
