--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-dom": "^16.9.3",
     "@types/styled-components": "^4.1.19",
     "node-sass": "^4.12.0",
+    "polished": "^3.4.2",
     "react": "^16.10.1",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
