--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.8.1",
+    "@types/jest": "^24.0.25",
     "@types/node": "^12.12.3",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
@@ -46,6 +47,7 @@
     "@storybook/addon-links": "^5.2.8",
     "@storybook/addons": "^5.2.8",
     "@storybook/react": "^5.2.8",
+    "@testing-library/react": "^9.4.0",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "babel-plugin-styled-components": "^1.10.6"
   }
