--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "polished": "^3.4.2",
     "react": "^16.10.1",
     "react-dom": "^16.11.0",
+    "react-flickity-component": "^3.4.0",
     "react-scripts": "^3.3.0",
     "styled-components": "^4.4.0",
     "typescript": "^3.6.4"
